--- a/index.html
+++ b/index.html
@@ -1,78 +1,32 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Can WebDev</title>
-    </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>CSS</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <!-- Headings -->
-    <h1>Heading One</h1>
-    <h2>Heading Two</h2>
-    <h3>Heading Three</h3>
-    <h4>Heading Four</h4>
-    <h5>Heading Five</h5>
-    <h6>Heading Six</h6>
-    <!--Paragraph -->
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, aspernatur atque consequatur cupiditate
-        enim, eum exercitationem ipsa maxime molestias mollitia neque nihil possimus quia soluta, temporibus vel veniam
-        vero voluptas.
-    </p>
-    <!-- Ordered List -->
-    <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>React</li>
-        <li>JavaScript</li>
-    </ol>
-    <!-- Unordered List -->
-    <ul>
-        <li>Peter</li>
-        <li>John</li>
-        <li>Can</li>
-        <li>Savci</li>
-    </ul>
-    <!-- Nested List -->
-    <ol>
-        <li>Docker</li>
-        <ul>
-            <li>Kubernetes</li>
-            <li>AWS</li>
-            <li>WSL</li>
-        </ul>
-    </ol>
-    <!-- Local Images -->
-    <img src="images/pexels-mirac-sendil-15115035-14221399.jpg" alt="Cute Woman" width="200px" height="200px">
-    <!-- Remote Images -->
-    <img src="https://images.pexels.com/photos/23285793/pexels-photo-23285793/free-photo-of-deniz-peyzaj-manzara-plaj.jpeg?auto=compress&cs=tinysrgb&w=400&lazy=load" alt="Landscape" width="400px" height="400px">
-    <!-- Links -->
-    <a href="https://www.youtube.com/watch?v=bWACo_pvKxg&list=PLSDeUiTMfxW6VChKWb26Z_mPR4f6fAmMV">Click Here!</a>
-    <!-- Hyperlinks -->
-    <a href="about.html">Next Page</a>
-    <!-- Forms -->
-    <form>
-        <label>Name</label>
-        <input type="text">
-        <label for="email">Email</label>
-        <input type="email" id="email">
-        <label for="password">Password</label>
-        <input type="password" id="password">
-        <input type="submit">
-        <input type="button" value="Learn More">
-        <input type="color">
-        <input type="datetime">
-        <input type="file">
-        <input type="search">
-    </form>
-    <!-- Videos and Audios -->
-    <video controls src=""></video>
-    <audio controls src=""></audio>
-    <!-- Formatting -->
-    <p>I am <b>Can Savci</b></p>
-    <p>I am <i>Can Savci</i></p>
-    <small>Hello</small>
-    <p><del>$200</del> - $100</p>
-    <ins>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, laboriosam ut. Accusantium autem, dolor dolorum ea excepturi harum, ipsam laboriosam laudantium minima, nemo nihil non pariatur possimus soluta unde. Eveniet.</ins>
-    <p>X <sub>2</sub><sup>2</sup></p>
-    <p><mark>Anarchism!</mark></p>
+  <h1>Color Names</h1>
+  <h2>RGB</h2>
+  <h3>HEX</h3>
+  <h4>HSL</h4>
+  <div class="poetsen-one-regular">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid autem consectetur cumque est explicabo hic ipsam iure, iusto natus neque qui rem repellat repudiandae suscipit ut veritatis voluptatem voluptatibus!</p>
+  </div>
+  <h5 class="one">Can Savci</h5>
+  <h6 class="two">Guvercin</h6>
+  <p id="idone">Hello, I am the id selector.</p>
+  <a href="">Learn More</a>
+  <div>Hikaye</div>
+  <div class="text">Başladı</div>
+  <a class="link" href="https://wtforms.readthedocs.io/en/3.0.x/fields/">WTForms</a>
+  <a class="visited" href="https://www.wikipedia.com">Wikipedia</a>
+  <a class="hover" href="https://www.twitch.tv">Twitch</a>
+  <a class="active" href="https://www.udemy.com">Udemy</a>
+  <!-- Inheritance-->
+  <div class="parent">
+    Hello
+    <div class="children">World</div>
+  </div>
 </body>
 </html>
